[package]
name = "downcast-rs"
version = "1.1.0"
authors = ["Ashish Myles <marcianx@gmail.com>"]
repository = "https://github.com/marcianx/downcast-rs"
description = """
Trait object downcasting support using only safe Rust. It supports type
parameters, associated types, and type constraints.
"""
readme = "README.md"
keywords = ["downcast", "any", "trait", "associated", "constraint"]
license = "MIT/Apache-2.0"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }
